# MorphisHash

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: BenchmarkData.h  benchmark_construction.cpp  bijections.cpp  golombMemoTuner.cpp  numComponents.cpp  numHashEvals.cpp  playground.cpp
benchmark/bijections/: RecSplit.h  RecSplitRotate.h  ShockHash1.h  ShockHash1Rotate.h
include/: BitVec.h  CuckooUnionFind.h  MorphisHash-internal.h  MorphisHash-precompiled.h  MorphisHash.h  MorphisHash2.h  MorphisHash2Flat.h  MorphisHashFlat.h  PairingFunction.h  RiceBitVector.h  SIMDShockHash.hpp  ShockHash.h  ShockHash2-internal.h  ShockHash2-precompiled.h  ShockHash2.h  ShockHash2Flat.h  ShockHash2FlatBase.h  SimdUtils.h  Sorter.hpp  TinyBinaryCuckooHashTable.h  UnionFind.h
scripts/: leafMethods.sh  morphisbench.sh  partitioning.sh
src/: MorphisHash-precompiled.cpp  MorphisHash2-precompiled.cpp  ShockHash2-precompiled.cpp  Sorter.cpp
